--- a/sign.html
+++ b/sign.html
@@ -9,13 +9,25 @@
 
 <body>
     <script>
-        let value = prompt('Type a number', 0);
-        if (value > 0) {
-            alert(1);
-        } else if (value < 0) {
-            alert(-1);
-        } else {
-            alert(0);
+        let value = prompt("Type a number", 0)
+        a = parseInt(value)
+
+        switch (a) {
+            case 0: {
+                alert(0)
+                break
+            }
+            case -5: {
+                alert(-1)
+                break
+            }
+            case 5: {
+                alert(1)
+                break
+            }
+            default:{
+                document.write("nhap lai di chi duoc nhap 0 or 5 or -5 thoi")
+            }
         }
     </script>
 </body>
